Prevents flickering on contact-menu width by switching from long- to short names and vice versa

--- a/assets/css/contacts.css
+++ b/assets/css/contacts.css
@@ -156,6 +156,7 @@ html {
     position: relative;
     height: calc(100svh - 96px);
     overflow: hidden;
+    width: 66%;
 }
 
 .separator {
